--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.2"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.2",
+    "tabler-react": "^1.30.1"
   },
   "scripts": {
     "start": "react-scripts start",
