--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
     "babel-plugin-root-import": "^6.5.0",
+    "dotenv": "^8.2.0",
+    "formik": "^2.1.5",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.2",
+    "react-scripts": "^3.4.3",
     "tabler-react": "^1.30.1"
   },
   "scripts": {
