--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookstate/core": "^1.7.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,9 +13,12 @@
     "babel-plugin-root-import": "^6.5.0",
     "dotenv": "^8.2.0",
     "formik": "^2.1.5",
+    "mui-datatables": "^3.4.1",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-notifications-component": "^2.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "tabler-react": "^1.30.1"
