--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hookstate/core": "^1.7.0",
+    "@hookstate/core": "^1.8.8",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -21,6 +21,8 @@
     "react-notifications-component": "^2.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "react-select": "^3.1.0",
+    "react-select-search": "^2.1.0",
     "tabler-react": "^1.30.1"
   },
   "scripts": {
