--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 MONGO_URL=mongodb://localhost/expression-db
 REACT_APP_API_URL=http://localhost:3333/api
+
+
+MONGO_URL_DEPLOY=mongodb+srv://deploy:OxYi6jpfZCaDYNby@expression-transportado.kt1g0.mongodb.net/expression-transportadora?retryWrites=true&w=majority
+
+
