--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,14 @@
     "@hookstate/core": "^1.8.8",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@react-pdf/renderer": "^1.6.13",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "babel-plugin-root-import": "^6.5.0",
     "dotenv": "^8.2.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.1.5",
     "mui-datatables": "^3.4.1",
     "react": "^16.13.1",
