FIX PayModal not setting paid transaction

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# MONGO_URL=mongodb://localhost/expression-db
-MONGO_URL=mongodb+srv://deploy:OxYi6jpfZCaDYNby@expression-transportado.kt1g0.mongodb.net/expression-transportadora?retryWrites=true&w=majority
+MONGO_URL=mongodb://localhost/expression-db
+# MONGO_URL=mongodb+srv://deploy:OxYi6jpfZCaDYNby@expression-transportado.kt1g0.mongodb.net/expression-transportadora?retryWrites=true&w=majority
 REACT_APP_API_URL=http://localhost:3333/api
 
 
