--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "server": "nodemon index.js",
     "dev": "concurrently \"npm run server\" \" npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm run build",
+    "render-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
