--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clientinstall": "npm install --prefix client",
     "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build -- prefix client",
-    "heroku-postbuild": "cd client && npm install && npm run build",
-    "render-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
