--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MONGO_URL=mongodb://localhost/expression-db
+MONGO_URL=mongodb+srv://deploy:OxYi6jpfZCaDYNby@expression-transportado.kt1g0.mongodb.net/?retryWrites=true&w=majority
 REACT_APP_API_URL=http://localhost:3333/api
 
 
-MONGO_URL_DEPLOY=mongodb+srv://deploy:OxYi6jpfZCaDYNby@expression-transportado.kt1g0.mongodb.net/expression-transportadora?retryWrites=true&w=majority
+MONGO_URL_DEPLOY=mongodb+srv://deploy:OxYi6jpfZCaDYNby@expression-transportado.kt1g0.mongodb.net/?retryWrites=true&w=majority
 
 
