fix: error db connection

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb+srv://deploy:OxYi6jpfZCaDYNby@expression-transportado.kt1g0.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://deploy:PDr9i8TR7SvizaGe@cluster0.xghnizn.mongodb.net/?retryWrites=true&w=majority
 REACT_APP_API_URL=http://localhost:3333/api
 
 
